--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -13,7 +13,13 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="300dp"
         />
-
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnlistview"
+        android:text="listviewAdapter"
+        android:layout_gravity="center_horizontal"
+        />
 
 
 
