--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -13,10 +13,18 @@
         <action
             android:id="@+id/action_mainFragment_to_spinnerFragment"
             app:destination="@id/spinnerFragment" />
+        <action
+            android:id="@+id/action_mainFragment_to_listViewFragment"
+            app:destination="@id/listViewFragment" />
     </fragment>
     <fragment
         android:id="@+id/spinnerFragment"
         android:name="com.matrix.spinnersandadapters.SpinnerFragment"
         android:label="Spinner"
         tools:layout="@layout/fragment_spinner" />
+    <fragment
+        android:id="@+id/listViewFragment"
+        android:name="com.matrix.spinnersandadapters.ListViewFragment"
+        android:label="fragment_list_view"
+        tools:layout="@layout/fragment_list_view" />
 </navigation>
