--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -20,7 +20,20 @@
         android:text="listviewAdapter"
         android:layout_gravity="center_horizontal"
         />
-
+ <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnbaseAdapter"
+        android:text="Base Adapter List"
+        android:layout_gravity="center_horizontal"
+        />
+<Button
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:id="@+id/btncred"
+    android:text="Cred"
+    android:layout_gravity="center_horizontal"
+    />
 
 
 
