--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -16,6 +16,9 @@
         <action
             android:id="@+id/action_mainFragment_to_listViewFragment"
             app:destination="@id/listViewFragment" />
+        <action
+            android:id="@+id/action_mainFragment_to_baseAdapterFragment"
+            app:destination="@id/baseAdapterFragment" />
     </fragment>
     <fragment
         android:id="@+id/spinnerFragment"
@@ -27,4 +30,14 @@
         android:name="com.matrix.spinnersandadapters.ListViewFragment"
         android:label="fragment_list_view"
         tools:layout="@layout/fragment_list_view" />
+    <fragment
+        android:id="@+id/baseAdapterFragment"
+        android:name="com.matrix.spinnersandadapters.BaseAdapterFragment"
+        android:label="fragment_base_adapter"
+        tools:layout="@layout/fragment_base_adapter" />
+    <fragment
+        android:id="@+id/credFragment"
+        android:name="com.matrix.spinnersandadapters.CredFragment"
+        android:label="fragment_cred"
+        tools:layout="@layout/fragment_cred" />
 </navigation>
